2012-06-04  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c: Be more resolute with inlining.

2012-06-04  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile: Add rules to build Win32 executables.

2012-06-04  Georg-Johann Lay  <avr@gjlay.de>

	* README: Update new repositiry URL and avrtest-xmega description.
	
2012-06-04  Georg-Johann Lay  <avr@gjlay.de>

	* flag-tables.c: New generated file.
	* avrtest.c: Include it. Include sreg.h.
	(main): Don't call init_flag_update_tables.
	(flag_update_table_add8): Remove.
	(flag_update_table_sub8): Remove.
	(flag_update_table_ror8): Remove.
	(flag_update_table_inc): Remove.
	(flag_update_table_dec): Remove.
	(flag_update_table_logical): Remove.
	(FUT_ADD8_RES): Move to...
	(FUT_ADD8_V2_80): Move to...
	(FUT_ADD8_V1_80): Move to...
	(FUT_ADD8_V2_08): Move to...
	(FUT_ADD8_V1_08): Move to...
	(FUT_SUB8_RES): Move to...
	(FUT_SUB8_V2_80): Move to...
	(FUT_SUB8_V1_80): Move to...
	(FUT_SUB8_V2_08): Move to...
	(FUT_SUB8_V1_08): Move to...
	(update_zns_flags): Move to...
	(init_flag_update_tables): Move to...

	* gen-flag-tables.c: ...this new file.
	* sreg.h: New file.

	* Makefile (avrtest.c): Depend on flag-tables.c and sreg.h
	(flag-tables.c): New rule.
	(gen-flag-tables): New rule.
	(clean): rm gen-flag-tables, *.i. *.s

2012-05-24  Georg-Johann Lay  <avr@gjlay.de>
 
	* avrtest.c (avr_op_index_XCH, avr_op_index_LAS, avr_op_index_LAC,
	avr_op_index_LAT): New enum values.
	(xmega_atomic): New function.
	(avr_op_XCH): New function.
	(avr_op_LAS, avr_op_LAC, avr_op_LAT): New functions.
	(opcode_func_array): Add XMEGA opcodes: XCH, LAS, LAC, LAT.
	(decode_opcode): Handle 0x9204, 0x9205, 0x9206, 0x9207.

2012-03-20  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (all): Add exit-atmega103.o.
	* dejagnuboards/atmega103-sim.exp: New file.

2012-03-12  Georg-Johann Lay  <avr@gjlay.de>

	* avr51-flash1.x: New file.
	* dejagnuboards/atmega128-sim.exp (ldflags): Pass path where
	avrtest is located in -L so that custom ld script like above 